diesel_compile_tests/tests/fail/table_without_primary_key.stderr
error: neither an explicit primary key found nor does an `id` column exist.
       consider explicitly defining a primary key. 
       for example for specifying `user_id` as primary key:
       
       table! {
       
                            user(user_id){
           user (user_id) {
               user_id -> Integer,
               name -> Text,
           }
       }
 --> tests/fail/table_without_primary_key.rs:5:5
  |
LL |     user {
  |     ^^^^
  |
  = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
